# semantic-plagiarism-engine

./: .gitignore  DELIVERY_CHECKLIST.md  GITHUB_UPLOAD.md  MODEL_IMPROVEMENT.md  README.md  SHA256SUMS.txt  pyproject.toml  requirements.txt  run_demo.ps1  run_demo.sh
.github/workflows/: tests.yml
data/processed/: sample_pairs.csv
data/sample_corpus/: doc_01.txt  doc_02.txt  doc_03.txt  doc_04.txt  doc_05.txt  doc_06.txt  doc_07.txt  doc_08.txt  doc_09.txt  doc_10.txt  doc_11.txt  doc_12.txt
docs/: project_spec.tex
notebooks/: exploration.ipynb
outputs/: bonus_metrics.csv  calibrated_metrics.csv  candidates.csv  candidates_ensemble.csv  metrics.csv  metrics_quora_v2.csv  metrics_v2.csv  predictions_quora_v2.csv  predictions_v2.csv
src/plagiarism_engine/: __init__.py  bonus.py  cli.py  dataset.py  ensemble.py  evaluation.py  lsh.py  minhash.py  preprocessing.py  simhash.py  tfidf_cosine.py
tests/: test_bonus.py  test_engine.py  test_ensemble.py
