[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-plagiarism-engine"
version = "1.1.0"
description = "CLI engine for duplicate and near-plagiarism detection using MinHash/LSH and TF-IDF weighted SimHash"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Student"}
]
dependencies = ["numpy>=1.24.0"]

[project.scripts]
plagiarism-engine = "plagiarism_engine.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
